Finished histogram party

--- a/histogram/Makefile
+++ b/histogram/Makefile
@@ -17,8 +17,21 @@ clean:
 histo.o : histo.c
 	$(CC) $(CFLAGS) -c histo.c $(INCLUDE) 
 
-histo_ver1 : histo_ver1.o $(UNITFILES)
-	$(CC) $(CFLAGS) -o histo_ver1 histo_ver1.o $(UNITFILES) $(LIB)
+histo_locks : histo_locks.o $(UNITFILES)
+	$(CC) $(CFLAGS) -o histo_locks histo_locks.o $(UNITFILES) $(LIB)
 
-histo_ver1.o : histo_ver1.c
-	$(CC) $(CFLAGS) -c histo_ver1.c $(INCLUDE)
+histo_locks.o : histo_locks.c
+	$(CC) $(CFLAGS) -c histo_locks.c $(INCLUDE)
+
+
+histo_atomic : histo_atomic.o $(UNITFILES)
+	$(CC) $(CFLAGS) -o histo_atomic histo_atomic.o $(UNITFILES) $(LIB)
+
+histo_ver2.o : histo_atomic.c
+	$(CC) $(CFLAGS) -c histo_atomic.c $(INCLUDE)
+
+histo_creative: histo_creative.o $(UNITFILES)
+	$(CC) $(CFLAGS) -o histo_creative histo_creative.o $(UNITFILES) $(LIB)
+
+histo_creative.o : histo_creative.c
+	$(CC) $(CFLAGS) -c histo_creative.c $(INCLUDE)
